# AgentForge

./: .dockerignore  .env.example  .gitignore  Dockerfile  GITHUB_GUIDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
AgentForge-Builder/: 00_READ_FIRST.md  AI_CONTEXT.md  BUILD_RULES.md  CHECKLIST.md  CODING_STANDARDS.md  GEMINI_PROJECT_GUIDE.md  GETTING_STARTED.md  MANIFEST.md  PROJECT_INDEX.md  README.md  ROADMAP.md  agent_builder_playbook.md
deployment/: cloud-run.md
docs/: ADK_INTEGRATION.md  BUILD_RUN_GITHUB_GUIDE.md  MILESTONE_05_WORKFLOW_ENGINE_REPORT.md  MILESTONE_06_MEMORY_SYSTEM_REPORT.md  MILESTONE_07_MCP_TOOL_INTEGRATION_REPORT.md  MILESTONE_08_SECURITY_LAYER_REPORT.md  MILESTONE_09_EVALUATION_FRAMEWORK_REPORT.md  MILESTONE_10_OBSERVABILITY_TELEMETRY_REPORT.md  MILESTONE_11_INTERFACES_DEPLOYMENT_REPORT.md  MILESTONE_12_SUBMISSION_PACKAGE_REPORT.md  README.md
frontend/: package-lock.json  package.json
scripts/: smoke_test.py
submissions/: ARTIFACT_MANIFEST.md  DEMO_GUIDE.md  JUDGE_WALKTHROUGH.md  PROJECT_CARD.md  README.md  TECHNICAL_ARCHITECTURE_SUMMARY.md  VIDEO_STORYBOARD.md
tests/: test_adk_integration.py  test_agent_registry.py  test_api_app.py  test_api_handlers.py  test_capability_router.py  test_cli.py  test_config.py  test_domain_aware_generation.py  test_domain_models.py  test_evaluation_domain.py  test_evaluation_service.py  test_evaluation_store.py  test_mcp_tool_adapter.py  test_memory_domain.py  test_memory_service.py  test_memory_store.py  test_observability_domain.py  test_observability_service.py  test_planner_agent.py  (+16 more)
(+120 files in other folders)
