[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge"
version = "0.1.0"
description = "Plugin-first multi-agent AI software engineering platform scaffold"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AgentForge Team" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
agentforge = "agentforge.interfaces.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
